fix(styles): static version for light and dark modes

--- a/apps/web/src/features/hypernative/components/HnSignupFlow/styles.module.css
+++ b/apps/web/src/features/hypernative/components/HnSignupFlow/styles.module.css
@@ -234,8 +234,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding: var(--space-6);
+  justify-content: top;
+  margin-top: var(--space-4);
+  padding: var(--space-12) var(--space-6);
   height: 100%;
   text-align: center;
 }
@@ -244,10 +245,19 @@
   font-weight: 700;
   font-size: 24px;
   color: var(--color-static-main);
-  margin-bottom: var(--space-2);
+  margin-bottom: var(--space-1);
 }
 
 .errorMessage {
   color: var(--color-text-secondary);
   max-width: 400px;
+  margin-bottom: var(--space-4) !important;
+}
+
+.reloadButton {
+  background-color: var(--color-static-main);
+  color: #fff;
+  max-width: fit-content;
+  align-self: center;
+  padding-inline: var(--space-2);
 }
